# dictionary

./: .gitignore  DB.hs  Download.hs  Main.hs  Parse.hs  README.md  dictionary.cabal
