name: dictionary
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: anshu.avinash35@gmail.com
category: Text
author: Anshu Avinash

executable dictionary
    build-depends:
        base >=4.7 && <4.8,
        bytestring >=0.10 && <0.11,
        keyvalue >=0.1 && <0.2,
        http-conduit >=2.1 && <2.2,
        conduit-extra >=1.1 && <1.2,
        conduit >=1.2 && <1.3
    main-is: Main.hs
    default-language: Haskell2010
